crates/prql_compiler/src/semantic/resolver/snapshots/prql_compiler__semantic__resolver__test__frames_and_names-3.snap
---
source: crates/prql_compiler/src/semantic/resolver/mod.rs
expression: "resolve_lineage(r#\"\n            from e = employees\n            join salaries (==emp_no)\n            group {e.emp_no, e.gender} (\n                aggregate {\n                    emp_salary = average salaries.salary\n                }\n            )\n            \"#).unwrap()"
---
columns:
  - Single:
      name:
        - e
        - emp_no
      target_id: 219
      target_name: ~
  - Single:
      name:
        - e
        - gender
      target_id: 220
      target_name: ~
  - Single:
      name:
        - emp_salary
      target_id: 245
      target_name: ~
inputs:
  - id: 180
    name: e
    table:
      - default_db
      - employees
  - id: 214
    name: salaries
    table:
      - default_db
      - salaries

