crates/prql_compiler/src/semantic/resolver/snapshots/prql_compiler__semantic__resolver__test__frames_and_names.snap
---
source: crates/prql_compiler/src/semantic/resolver/mod.rs
expression: "resolve_lineage(r#\"\n            from orders\n            select {customer_no, gross, tax, gross - tax}\n            take 20\n            \"#).unwrap()"
---
columns:
  - Single:
      name:
        - orders
        - customer_no
      target_id: 210
      target_name: ~
  - Single:
      name:
        - orders
        - gross
      target_id: 211
      target_name: ~
  - Single:
      name:
        - orders
        - tax
      target_id: 212
      target_name: ~
  - Single:
      name: ~
      target_id: 214
      target_name: ~
inputs:
  - id: 180
    name: orders
    table:
      - default_db
      - orders

