crates/prql_compiler/src/semantic/resolver/snapshots/prql_compiler__semantic__resolver__test__functions_nested.snap
---
source: crates/prql_compiler/src/semantic/resolver/mod.rs
expression: "resolve_derive(r#\"\n            let lag_day = x -> s\"lag_day_todo({x})\"\n            let ret = x dividend_return ->  x / (lag_day x) - 1 + dividend_return\n\n            from a\n            derive (ret b c)\n            \"#).unwrap()"
---
- RqOperator:
    name: std.add
    args:
      - RqOperator:
          name: std.sub
          args:
            - RqOperator:
                name: std.div_f
                args:
                  - Ident:
                      - this
                      - a
                      - b
                  - SString:
                      - String: lag_day_todo(
                      - Expr:
                          expr:
                            Ident:
                              - this
                              - a
                              - b
                          format: ~
                      - String: )
              ty:
                kind:
                  Union:
                    - - int
                      - kind:
                          Primitive: Int
                        name: int
                    - - float
                      - kind:
                          Primitive: Float
                        name: float
                name: ~
            - Literal:
                Integer: 1
              ty:
                kind:
                  Primitive: Int
                name: ~
        ty:
          kind:
            Union:
              - - int
                - kind:
                    Primitive: Int
                  name: int
              - - float
                - kind:
                    Primitive: Float
                  name: float
              - - timestamp
                - kind:
                    Primitive: Timestamp
                  name: timestamp
              - - date
                - kind:
                    Primitive: Date
                  name: date
          name: ~
      - Ident:
          - this
          - a
          - c
        ty:
          kind:
            Union:
              - - int
                - kind:
                    Primitive: Int
                  name: int
              - - float
                - kind:
                    Primitive: Float
                  name: float
              - - timestamp
                - kind:
                    Primitive: Timestamp
                  name: timestamp
              - - date
                - kind:
                    Primitive: Date
                  name: date
          name: ~
  ty:
    kind:
      Union:
        - - int
          - kind:
              Primitive: Int
            name: int
        - - float
          - kind:
              Primitive: Float
            name: float
        - - timestamp
          - kind:
              Primitive: Timestamp
            name: timestamp
        - - date
          - kind:
              Primitive: Date
            name: date
    name: ~

